You can now view dojos, banish ninjas, and recruit rogue ninjas

--- a/Views/NinjaDojo/Dojos.cshtml
+++ b/Views/NinjaDojo/Dojos.cshtml
@@ -15,7 +15,7 @@
                     {
                         if(dojo.Id != 1){
                             <tr>
-                                <td>@dojo.DojoName</td>
+                                <td><a href="/dojos/@dojo.Id">@dojo.DojoName</a></td>
                             </tr>
                         }
                         
