--- a/Views/NinjaDojo/ShowNinja.cshtml
+++ b/Views/NinjaDojo/ShowNinja.cshtml
@@ -6,4 +6,4 @@
 
 <p>Current Dojo - <a href="/dojos/@ViewBag.Ninja.dojo.Id">@ViewBag.Ninja.dojo.DojoName</a></p>
 
-<a href="/ninjas" class="button">Go Back</a>
+<a href="/ninjas" class="button">Back to Ninjas</a>
